--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cheerio": "^1.0.0-rc.2",
     "clockwork": "^0.1.4",
     "compression": "^1.7.2",
-    "connect-mongo": "^2.0.1",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^5.0.1",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
@@ -38,10 +38,12 @@
     "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "node-cmd": "^3.0.0",
     "node-foursquare": "^0.3.2",
     "node-linkedin": "^0.5.6",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.13.1",
     "node-sass-middleware": "^0.11.0",
+    "node-ssh": "^8.0.0",
     "nodemailer": "^4.6.4",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
@@ -72,7 +74,7 @@
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.10.0",
     "mocha": "^5.0.5",
-    "nyc": "^11.6.0",
+    "nyc": "^15.0.1",
     "sinon": "^4.5.0",
     "sinon-mongoose": "^2.1.1",
     "supertest": "^3.0.0"
